chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muplat
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: muplat
