chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muplat-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.mukinabaht.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: muplat
                port:
                  number: 8080
